--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class = "calendar__notification">
         <h2 class = "calendar__title">2020 Year Calendar</h2>
         <p>달력은 해가 바뀔 때마다 자동적으로 갱신됩니다.</p>
+        <input type="text" class = "calendar__input", id="startDayInput" placeholder="Input start day of year">
     </div>
     </div>
     <div class="calendar"></div>
