--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CalendarJS</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class = "calendar__notification">
-        <h2 class = "calendar__title">2020 Year Calendar</h2>
         <p>달력은 해가 바뀔 때마다 자동적으로 갱신됩니다.</p>
-        <input type="text" class = "calendar__input", id="startDayInput" placeholder="Input start day of year">
+        <div class = "calendar__input">
+            <button class = "inputBtn" value = -1><i class="fas fa-arrow-left"></i></button>
+            <button class = "inputBtn" value = 0>Show All</button>
+            <button class = "inputBtn" value = 1><i class="fas fa-arrow-right"></i></button>
+        </div>
+        <!-- <input type="text" class = "calendar__input", id="startDayInput" placeholder="Search month number."> -->
     </div>
     </div>
     <div class="calendar"></div>
