Bug fixed & arrow control algorithm modified.(use dequeue.)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     </div>
     </div>
     <div class="calendar"></div>
-    <script src="./cal.js"></script>
+    <script src="./cal.js" defer type="module"></script>
   </body>
 </html>
